added tools/*/project.xml in maven.multiproject.includes property

--- a/gasp/project.properties
+++ b/gasp/project.properties
@@ -27,7 +27,8 @@ maven.conf.dir = ${maven.src.dir}/conf
 # multiproject properties
 maven.multiproject.site.goals = site
 maven.multiproject.excludes = ${rootdir}/project.xml
-maven.multiproject.includes = bootstrap/project.xml,core/project.xml,plugins/*/project.xml
+maven.multiproject.includes = bootstrap/project.xml,core/project.xml,\
+  plugins/*/project.xml,tools/*/project.xml
 maven.multiproject.basedir = ${rootdir}
 maven.multiproject.overviewPage.create = false
 
